[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Blocky_death.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Blocky.png" type="Texture" id=3]
[ext_resource path="res://sfx/enemy_hit_player.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/Player_Death.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/Jump_8.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/player_walk.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 44.3613 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.4758, 44.9949 )

[sub_resource type="Animation" id=3]
resource_name = "dies"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 0.420448 ),
"update": 0,
"values": [ Vector2( 1.36284, 1.4 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.74902 ), Color( 0.0862745, 0.501961, 0, 0.498039 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("PlayerSprite")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.435275, 2.21914, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Player_death")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 4.75683 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0.831373, 0, 0, 1 ), Color( 0.156863, 0.615686, 0.152941, 1 ), Color( 0, 0.0156863, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyDetector:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 0, 2 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Enemy_Hit_player")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
collision_mask = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -285.569, -302.716 ],
"_edit_vertical_guides_": [ -40.8208, 39.7726 ]
}
speed = Vector2( 800, 1000 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( -0.12516, -49.349 )
scale = Vector2( 1.36284, 1.4 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -48.365 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 100, -100 )
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_top = 0.38
drag_margin_bottom = 0.16
editor_draw_drag_margin = true

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.901961, 0, 0.529412, 1 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -47.6014 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dies = SubResource( 3 )
anims/hurt = SubResource( 4 )

[node name="Enemy_Hit_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 24.0
pitch_scale = 0.69

[node name="Player_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Player_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Player_walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
